// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question should equal to snapshot when answer is closed 1`] = `
Array [
  <div
    className="row"
  >
    <div
      className="col m-2 p-2 border-top border-light"
    >
      Вопрос 
      /
      5
      , правильно: 
      5
      <div
        className="progress"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow={NaN}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "NaN%",
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col m-2 p-2 border-top border-light text-left text-light fw-bold"
    >
      
    </div>
  </div>,
  "Answers",
  <div
    className="row"
  >
    <div
      className="col m-2 p-2 border-top border-light text-center"
    >
      <button
        className="btn me-2 btn-primary"
        onClick={[Function]}
        type="button"
      >
        Проверить
      </button>
      <button
        className="btn ms-2 btn-secondary"
        onClick={[Function]}
        type="button"
      >
        Следующий
      </button>
    </div>
  </div>,
]
`;

exports[`Question should equal to snapshot when answer is open 1`] = `
Array [
  <div
    className="row"
  >
    <div
      className="col m-2 p-2 border-top border-light"
    >
      Вопрос 
      /
      5
      , правильно: 
      5
      <div
        className="progress"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow={NaN}
          className="progress-bar"
          role="progressbar"
          style={
            Object {
              "width": "NaN%",
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col m-2 p-2 border-top border-light text-left text-light fw-bold"
    >
      
    </div>
  </div>,
  "Answers",
  "Answer",
  <div
    className="row"
  >
    <div
      className="col m-2 p-2 border-top border-light text-center"
    >
      <button
        className="btn me-2 btn-secondary"
        onClick={[Function]}
        type="button"
      >
        Проверить
      </button>
      <button
        className="btn ms-2 btn-primary"
        onClick={[Function]}
        type="button"
      >
        Следующий
      </button>
    </div>
  </div>,
]
`;
